<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/notification"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/message"
            android:title="@string/messages" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_posts_list"
            android:icon="@drawable/paper"
            android:title="@string/posts_list" />
    </group>

    <item android:title="@string/contact_with_us" android:checkableBehavior="single">
        <menu>
            <item
                android:id="@+id/nav_about_website"
                android:icon="@drawable/about"
                android:title="@string/about_hsoub_io" />
            <item
                android:id="@+id/nav_about_app"
                android:icon="@drawable/about"
                android:title="@string/about_application" />
        </menu>
    </item>
</menu>