<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#FFFFFF"
            android:padding="6dp"
            android:layout_margin="6dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/btnAddLink"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/add_link"
                    android:textSize="30sp"
                    android:padding="10dp"
                    android:background="#FFAA00"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/btnAddComment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/add_topic"
                    android:textSize="30sp"
                    android:padding="10dp"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <AutoCompleteTextView
                    android:id="@+id/txtCommunity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/choose_community"/>
                <EditText
                    android:id="@+id/txtDirectLink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direct_url"/>
                <EditText
                    android:id="@+id/txtFillTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exact_title"/>
                <EditText
                    android:visibility="gone"
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="top|start"
                    android:lines="50"
                    android:minLines="6"
                    android:maxLines="50"
                    android:scrollbars="vertical"
                    android:hint="@string/rand_none"/>
                <CheckBox
                    android:id="@+id/ckbxOpenTerms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_post_checkbox"/>
                <Button
                    android:id="@+id/btnSendTopic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/publish_post"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</FrameLayout>
