<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rond.hsoub.settingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">
            <android.support.v7.widget.CardView
                android:id="@+id/crdOpenSettings"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:padding="6dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="#FFFFFF">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <de.hdodenhof.circleimageview.CircleImageView
                            xmlns:app="http://schemas.android.com/apk/res-auto"
                            android:id="@+id/imgUser"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/profile"
                            app:border_color="#FF000000"
                            android:layout_marginStart="2dp"
                            android:layout_marginLeft="2dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_margin="4dp"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/lblUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="@string/update_settings_online"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings2"
                style="?android:attr/listSeparatorTextViewStyle"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_you"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="top|start"
                android:lines="8"
                android:minLines="6"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:hint="@string/about_you"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/private_messages"
                style="?android:attr/listSeparatorTextViewStyle" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_option_1"/>
            <CheckBox
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_option_1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_settings"
                style="?android:attr/listSeparatorTextViewStyle"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_option_3"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_option_4"/>
            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_option_5"/>
            
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Update Settings"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
