<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:andorid="http://schemas.android.com/apk/res-auto"
    android:background="@mipmap/back_login"
    android:orientation="vertical"
    tools:context="com.rond.hsoub.MainActivity">
    <!-- TODO change Activity background image -->

    <!--include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"
        /-->

    <LinearLayout
        android:orientation="vertical"
        android:padding="40dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/txtusername"
            android:drawableStart="@mipmap/account"
            android:drawableLeft="@mipmap/account"
            android:hint="@string/Username"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:layout_marginTop="135dp"
            android:textColor="#FFF"
            android:drawablePadding="5dp"
            android:textColorHint="#999"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtpassword"
            android:drawableStart="@mipmap/lock"
            android:drawableLeft="@mipmap/lock"
            android:hint="@string/Password"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:textColor="#FFF"
            android:drawablePadding="5dp"
            android:textColorHint="#999"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/SignIn"
            android:id="@+id/button"
            android:background="@drawable/selector_xml_btn_yellow"
            android:layout_gravity="center_horizontal"
            android:onClick="checkLogin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Forgot_password"
            android:id="@+id/lblForgotPassword"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:textColor="#FFF"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/newAccount"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFF"
                />
            <TextView
                android:id="@+id/viewMainFragnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/Continue_without_Login"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFF"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>