<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rond.hsoub.profileFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_margin="10dp"
            android:background="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/profile"
                app:border_color="#FF000000"
                android:layout_margin="24dp"
                android:layout_gravity="center|top" />
            <TextView
                android:id="@+id/lblUserName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/profile_loading_username"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/lblBio"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/profile_loading_bio"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:background="#FFFFFF">
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:contentDescription="@string/rand_none"
                    android:src="@drawable/star"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_rep"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/lblRep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:text="@string/rand_number"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:contentDescription="@string/rand_none"
                    android:src="@drawable/circle"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_communities"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:contentDescription="@string/rand_none"
                        android:src="@drawable/left_arrow"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="end"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:contentDescription="@string/rand_none"
                    android:src="@drawable/paper"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_contributes"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:contentDescription="@string/rand_none"
                        android:src="@drawable/left_arrow"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="end"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="5dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:contentDescription="@string/rand_none"
                    android:src="@drawable/comment"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_comments"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:contentDescription="@string/rand_none"
                        android:src="@drawable/left_arrow"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="end"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</FrameLayout>
