<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginStart="3dp"
    android:layout_marginLeft="3dp"
    android:id="@+id/item_card_view_post_list">
    <RelativeLayout
        android:id="@+id/lytChangingColor"
        android:layout_width="match_parent"
        android:background="@color/postLevel3"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/lytHeader"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/lblVotes"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:text="@string/rand_number"/>
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/imgUserImg"
                android:layout_toEndOf="@+id/lblVotes"
                android:layout_toRightOf="@+id/lblVotes"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/profile"
                android:layout_margin="2dp"
                app:border_color="#FF000000"/>
            <TextView
                android:id="@+id/lblUserName"
                android:layout_toEndOf="@+id/imgUserImg"
                android:layout_toRightOf="@+id/imgUserImg"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rand_h6"/>
            <TextView
                android:id="@+id/lblTime"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:drawableStart="@drawable/clock"
                android:drawableLeft="@drawable/clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rand_time"/>
        </RelativeLayout>
        <TextView
            android:id="@+id/lblContent"
            android:layout_below="@id/lytHeader"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_width="match_parent"
            android:gravity="start"
            android:layout_height="wrap_content"
            android:text="@string/rand_h1"/>
        <ImageView
            android:id="@+id/imgVoteUp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/lblContent"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/rand_none"
            android:src="@drawable/thumb_up"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"/>
        <ImageView
            android:id="@+id/imgVoteDown"
            android:layout_toEndOf="@+id/imgVoteUp"
            android:layout_toRightOf="@+id/imgVoteUp"
            android:layout_below="@id/lblContent"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/rand_none"
            android:src="@drawable/thumb_down"/>
        <TextView
            android:id="@+id/lblShowComments"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/lblContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/comment2"
            android:drawableLeft="@drawable/comment2"
            android:text="@string/show_comments"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rcv_inner_comments"
            android:layout_marginTop="6dp"
            android:layout_below="@id/lblShowComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>
    </RelativeLayout>
</android.support.v7.widget.CardView>